# libdatastoremanager

./: CMakeLists.txt  SharemindLibDataStoreManagerConfig.cmake.in  SharemindLibDataStoreManagerConfigVersion.cmake.in
src/: DataStore.cpp  DataStore.h  DataStoreFactory.cpp  DataStoreFactory.h  DataStoreManager.cpp  DataStoreManager.h  datastoreapi.h
